fazendo o deploy da pagina em contrução

--- a/app/players/templates/players.html
+++ b/app/players/templates/players.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>King Poker Boladão</title>
 </head>
+    {% block content %}
 <body>
     <h1> AQUI É BRASIL PORRA</h1>
+    <h3>{{ Participant.name }}</h3>
 </body>
+    {% endblock %}
 </html>
