--- a/app/players/templates/index.html
+++ b/app/players/templates/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Album</a></li>
+            <li><a href="">Historia</a></li>
+            <li><a href="">Contato</a></li>
+                   
+        </ul>
+    </nav>
+    </div>
     <h1>Em Construção teste</h1>
 </body>
 </html>
