criando estilo do login

--- a/app/players/templates/login.html
+++ b/app/players/templates/login.html
@@ -28,7 +28,35 @@
             <button class="navbar-btn">Entrar</button>
          </nav>
     </header>
+    <div class="form-container">
+        <span class="close-icon"><ion-icon name="close"></ion-icon></span>
+        <div class="formbox">
+            <h2>Entrar</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"></span>
+                    <input type="email" required>
+                    <label for="email">Email</label>
+                </div>
+                <form action="#">
+                    <div class="input-box">
+                        <span class="icon"></span>
+                        <input type="password" required>
+                        <label for="password">Senha</label>
+                    </div>
+                    <div class="forget-remember">
+                        <label for=""> <input type="checkbox"> Me lembre</label>
+                        <a href="#">Esqueceu a senha?</a>
+                    </div>
+                    <button class="btn" type="submit">Entrar</button>
+                    <div class="reg-login">
+                        <p>Não tem conta? <a href="#" class="reg-link">Registre-se</a> </p>
+                        
+                    </div>
+            </form>
 
+        </div>
+    </div>
      <!-- Ionic Fonts -->
      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
