--- a/app/players/templates/login.html
+++ b/app/players/templates/login.html
@@ -28,19 +28,21 @@
             <button class="navbar-btn">Entrar</button>
          </nav>
     </header>
+
+    <!-- Form Login-->
     <div class="form-container">
         <span class="close-icon"><ion-icon name="close"></ion-icon></span>
-        <div class="formbox">
+        <div class="formbox login">
             <h2>Entrar</h2>
             <form action="#">
                 <div class="input-box">
-                    <span class="icon"></span>
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
                     <input type="email" required>
                     <label for="email">Email</label>
                 </div>
                 <form action="#">
                     <div class="input-box">
-                        <span class="icon"></span>
+                        <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
                         <input type="password" required>
                         <label for="password">Senha</label>
                     </div>
@@ -51,12 +53,42 @@
                     <button class="btn" type="submit">Entrar</button>
                     <div class="reg-login">
                         <p>Não tem conta? <a href="#" class="reg-link">Registre-se</a> </p>
-                        
                     </div>
             </form>
-
         </div>
+
+        <!-- Form Register-->
+        <div class="formbox register">
+            <h2>Registrar</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" required>
+                    <label for="email">Email</label>
+                </div>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="person"></ion-icon></span>
+                    <input type="text" required>
+                    <label for="text">Usuário</label>
+                </div>
+                <form action="#">
+                    <div class="input-box">
+                        <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                        <input type="password" required>
+                        <label for="password">Senha</label>
+                    </div>
+                    <div class="forget-remember">
+                        <label for=""> <input type="checkbox">Eu ceito os <a href="#" class="terms-conditions">termos</a> de uso & condições.</label>
+                    </div>
+                    <button class="btn" type="submit">Registrar</button>
+                    <div class="reg-login">
+                        <p>Já tem conta? <a href="#" class="log-link">Entrar</a></p>
+                    </div>
+            </form>
     </div>
+    <!--JavaScript-->
+    <script src="\app\static\js\login.js"></script>
      <!-- Ionic Fonts -->
      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
