--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -114,16 +114,40 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: transform .5s ease, height .2s ease;
     overflow: hidden;
+    transform: scale(0);
 }
 
+.form-container.active-popup{
+    transform: scale(1);
+}
+
+.form-container.active{
+    height: 500px;
+}
+
+.form-container.active .formbox.login{
+    transition: none;
+    transform: translateX(-400px);
+}
+
+.form-container.active .formbox.register{
+    transition: transfom .18s ease;
+    transform: translateX(0);
+}
 .formbox{
     width: 100%;
     padding: 40px;
 }
 
 .formbox.login{
-    display: none;
+    transition: transfom .18s ease;
+    transform: translateX(0);
+}
+.formbox.register{
+    position: absolute;
+    transform: translateX(400px);
 }
 
 .close-icon{
