--- a/app/players/templates/login.html
+++ b/app/players/templates/login.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -9,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <!-- Css Style-->
-    <link rel="stylesheet" href="\app\static\css\login.css">
+     <link rel="stylesheet" href="{% static '\css\login.css' %}">
+    <!--<link rel="stylesheet" href="\app\static\css\login.css">-->
     
 <title>KingPoker</title>
 </head>
@@ -37,13 +40,13 @@
             <form action="#">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" required>
+                    <input type="email" required autocomplete="new-password">
                     <label for="email">Email</label>
                 </div>
                 <form action="#">
                     <div class="input-box">
                         <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                        <input type="password" required>
+                        <input type="password" required autocomplete="new-password">
                         <label for="password">Senha</label>
                     </div>
                     <div class="forget-remember">
@@ -63,23 +66,29 @@
             <form action="#">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" required>
+                    <input type="email" required autocomplete="new-password">
                     <label for="email">Email</label>
                 </div>
             <form action="#">
                 <div class="input-box">
                     <span class="icon"><ion-icon name="person"></ion-icon></span>
-                    <input type="text" required>
+                    <input type="text" required autocomplete="new-password">
                     <label for="text">Usuário</label>
                 </div>
                 <form action="#">
                     <div class="input-box">
                         <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                        <input type="password" required>
+                        <input type="password" required autocomplete="new-password">
                         <label for="password">Senha</label>
                     </div>
+                    <form action="#">
+                        <div class="input-box">
+                            <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                            <input type="password" required autocomplete="new-password">
+                            <label for="password">Confirme a Senha</label>
+                        </div>
                     <div class="forget-remember">
-                        <label for=""> <input type="checkbox">Eu ceito os <a href="#" class="terms-conditions">termos</a> de uso & condições.</label>
+                        <label for=""> <input type="checkbox" required>Eu aceito os <a href="#" class="terms-conditions">termos</a> de uso & condições.</label>
                     </div>
                     <button class="btn" type="submit">Registrar</button>
                     <div class="reg-login">
@@ -88,7 +97,8 @@
             </form>
     </div>
     <!--JavaScript-->
-    <script src="\app\static\js\login.js"></script>
+    <script src="{% static '\js\login.js' %}"></script>
+    <!-- <script src="\app\static\js\login.js"></script> -->
      <!-- Ionic Fonts -->
      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
