--- a/app/players/templates/login.html
+++ b/app/players/templates/login.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <!-- Css Style-->
-     <link rel="stylesheet" href="{% static '\css\login.css' %}">
-    <!--<link rel="stylesheet" href="\app\static\css\login.css">-->
+    <link rel="stylesheet" href="{% static '\css\login.css' %}">
+    <link rel="stylesheet" href="\app\static\css\login.css">
     
 <title>KingPoker</title>
 </head>
@@ -25,8 +25,8 @@
         <!-- Navbar Menu-->
          <nav class="navbar">
             <a href="#">Home</a>
+            <a href="gallery">Galeria</a>
             <a href="#">Sobre</a>
-            <a href="#">Noticias</a>
             <a href="#">Blog</a>
             <button class="navbar-btn">Entrar</button>
          </nav>
@@ -97,8 +97,8 @@
             </form>
     </div>
     <!--JavaScript-->
-    <script src="{% static '\js\login.js' %}"></script>
-    <!-- <script src="\app\static\js\login.js"></script> -->
+    <!-- <script src="{% static '\js\login.js' %}"></script> -->
+    <script src="\app\static\js\login.js"></script>
      <!-- Ionic Fonts -->
      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
