--- a/app/accounts/static/css/profile.css
+++ b/app/accounts/static/css/profile.css
@@ -1,13 +1,54 @@
 .cards-statics {
-    display: grid; /* Ativa o grid layout */
-    grid-template-columns: repeat(4, 1fr); /* Cria 4 colunas do mesmo tamanho */
-    gap: 20px; /* Espaçamento entre os cards */
-    width: 100%; /* Largura total do container */
+    display: grid; 
+    grid-template-columns: repeat(4, 1fr); 
+    grid-template-rows: auto auto auto;
+    grid-template-areas: 
+        "perfil estatisticas espaco1 espaco2"
+        "extra_1 extra_1 extra_2 extra_3" 
+        "extra_4 extra_4 extra_5 extra_3";
+    gap: 20px; 
+    width: 100%; 
 }
 
 .card {
-    background-color: grey; /* Cor de fundo do card */
-    padding: 20px; /* Espaçamento interno do card */
-    box-sizing: border-box; /* Inclui padding e border no cálculo da largura */
-    text-align: center; /* Centraliza o texto dentro do card */
+    background-color: grey;
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+
+.perfil {
+    grid-area: perfil; 
+}
+
+.estatisticas {
+    grid-area: estatisticas; 
+}
+
+.espaco1 {
+    grid-area: espaco1; 
+
+.espaco2 {
+    grid-area: espaco2;
+}
+
+.extra_1 {
+    grid-area: extra_1;
+}
+
+.extra_2 {
+    grid-area: extra_2;
+}
+
+.extra_3 {
+    grid-area: extra_3;
+}
+
+.extra_4 {
+    grid-area: extra_4; 
+}
+
+.extra_5 {
+    grid-area: extra_5;/
 }
