--- a/app/accounts/templates/profile/profile.html
+++ b/app/accounts/templates/profile/profile.html
@@ -3,23 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="\app\accounts\static\css\profile.css">
+    <link rel="stylesheet" href="\app\accounts\static\css\profile.css"> <!-- Caminho do CSS -->
     <title>Document</title>
 </head>
 <body>
     <section class="cards-statics">
-
-        <div class="card"> perfil
-        </div>
-        <div class="card">
-            staticas
-        </div>
-        <div class="card">
-            não sei ainda
-        </div>
-        <div class="card">
-            não sei também
-        </div>
-      </section>
+        <div class="card perfil">Perfil</div>
+        <div class="card estatisticas">Estatísticas</div>
+        <div class="card espaco1">Espaco 1</div>
+        <div class="card espaco2">Espaco 2</div>
+        <div class="card extra_1">Extra 1</div>
+        <div class="card extra_2">Extra 2</div>
+        <div class="card extra_3">Extra 3</div>
+        <div class="card extra_4">Extra 4</div>
+        <div class="card extra_5">Extra 5</div>
+    </section>
 </body>
 </html>
