ajustando pagina de login e arquivos

--- a/app/accounts/templates/profile/profile.html
+++ b/app/accounts/templates/profile/profile.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="\app\accounts\static\css\profile.css"> <!-- Caminho do CSS -->
-    <title>Document</title>
+    <title>Perfil</title>
 </head>
 <body>
     <section class="cards-statics">
